<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/buy_layout"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="New Order"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_22sdp" />

            </android.support.v7.widget.Toolbar>


            <LinearLayout

                android:id="@+id/linear_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/complete_details"
                android:layout_margin="10dp"
                android:background="@drawable/sell"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/bariol_regular"
                    android:text="Material"
                    android:textSize="20sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#B8BECC" />

                <Spinner
                    android:id="@+id/buy_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="10"
                    android:entries="@array/material_arrays"
                    android:fontFamily="@font/bariol_bold"
                    android:prompt="@string/material_prompt"
                    android:textColor="#000000"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/sell"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/bariol_regular"
                    android:text="Quality"
                    android:textSize="20sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#B8BECC" />

                <Spinner
                    android:id="@+id/buy_spinner_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:entries="@array/quality_arrays"
                    android:fontFamily="@font/bariol_bold"
                    android:prompt="@string/quality_prompt"
                    android:textColor="#000000"
                    android:textSize="20sp">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_quality"
                android:layout_margin="10dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/sell"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/bariol_regular"
                    android:text="Size"
                    android:textSize="20sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#B8BECC" />

                <Spinner
                    android:id="@+id/buy_spinner_size"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:entries="@array/size_arrays"
                    android:fontFamily="@font/bariol_bold"
                    android:prompt="@string/size_prompt"
                    android:textColor="#000000"
                    android:textSize="20sp">

                </Spinner>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_quality"
                android:layout_margin="10dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/sell"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/bariol_regular"
                    android:text="Category"
                    android:textSize="20sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#B8BECC" />

                <Spinner
                    android:id="@+id/buy_spinner_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:entries="@array/category_arrays"
                    android:fontFamily="@font/bariol_bold"
                    android:prompt="@string/category_prompt"
                    android:textColor="#000000"
                    android:textSize="20sp">

                </Spinner>

            </LinearLayout>

            <EditText
                android:id="@+id/buy_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/sell"
                android:hint="enter Quantity"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:visibility="gone" />


            <Button
                android:id="@+id/proceed_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/proceed_button"
                android:fontFamily="@font/bariol_bold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"

                android:text="Proceed to location"
                android:textAllCaps="false"
                android:textColor="#ffffff"

                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/layout_nav_header"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>